fix alignment issue in hero

--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,7 @@ body {
   color: rgb(237, 236, 236);
   background-color: rgb(20, 18, 11);
   font-family : CursorGothic;
+  overflow-x: hidden;
 }
 
 header {
@@ -178,7 +179,6 @@ nav ul li{
     width: 100%;
     height: 875px;
     padding: 112px 20px 67.2px 20px;
-    box-sizing: content-box;
 }
 
 #hero-center{
